--- a/src/main/resources/templates/children/home.html
+++ b/src/main/resources/templates/children/home.html
@@ -7,8 +7,8 @@
 <body>
 <h1>Welcome to NaniNani</h1>
 
-<form method="post">
-    <a th:href="@{/NaniNani/add/}">Find out your child's optimal sleep schedule</a>
+<form>
+    <a th:href="@{/children/add/}">Find out your child's optimal sleep schedule</a>
 </form>
 
 </body>
