Authentication, Delete btn, Personalized Schedule btn and morningWakeUp insert

--- a/src/main/resources/templates/children/home.html
+++ b/src/main/resources/templates/children/home.html
@@ -8,7 +8,14 @@
 <h1>Welcome to NaniNani</h1>
 
 <form>
-    <a th:href="@{/children/add/}">Find out your child's optimal sleep schedule</a>
+    <p>
+        <a th:href="@{/children/add/}">Add a child and find out your child's optimal sleep schedule</a>
+    </p>
+    <p>
+        <a th:href="@{/children/list/}">List</a>
+    </p>
+
+
 </form>
 
 </body>
