--- a/src/main/resources/templates/children/addForm.html
+++ b/src/main/resources/templates/children/addForm.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Add a child</title>
+        <script src="http://localhost:35729/livereload.js"></script>
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    </head>
     <meta charset="UTF-8">
-    <title>Optimal sleep schedule</title>
-</head>
+    <title>Add your child's name and date of birth</title>
 <body>
-<h1>Optimal sleep schedule</h1>
+<h1>Add your child's name and date of birth</h1>
 
     <form method="post" th:action="@{/children/add}">
         <input type="text" name="name" placeholder="Child name">
-        <input type="date" name="dateOfBirth" max="2022-11-19">
+        <input type="date" name="dateOfBirth" min="2016-10-21" max = "2022-10-21">
         <input type="submit" value="Show the optimal sleep schedule">
-    </form>
+        </form>
 </body>
 </html>
