--- a/src/main/resources/templates/children/personalizedSleepSchedule.html
+++ b/src/main/resources/templates/children/personalizedSleepSchedule.html
@@ -11,13 +11,15 @@
 </head>
 <body>
 <div class="container">
-    <h1>Personalized sleep schedule</h1>
+
+    <h1 th:text="'Personalized sleep schedule for ' + ${childId}"> Personalized sleep schedule for </h1>
+
     <table class="table table-striped">
-        <form method="post" th:action="@{/children/personalizedSleepSchedule}">
-            <input type="time" name="timeMorningWakeUp" >
+        <form method="post" th:action="@{/children/personalizedSleepSchedule/{id}(id=${childId})}">
+            <input type="time" name="wakeUpTime" >
             <input type="submit" value="Next sleep">
         </form>
-
+        <h2 th:text="'Next sleep ' + ${nextSleepTime}"> sleep schedule for </h2>
     </table>
 </div>
 </body>
