--- a/src/main/resources/templates/children/editForm.html
+++ b/src/main/resources/templates/children/editForm.html
@@ -10,10 +10,35 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="p-3 mb-2 bg-info " style="--bs-bg-opacity: .1;">
-<div class="container">
-  <h1 th:text="'Edit child ' + ${child.name}"></h1>
+
+<div class="container"><br>
+  <nav class="navbar bg-light px-3 mb-3">
+    <div class="nav nav-pills flex-column flex-sm-row">
+      <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page"  th:href="@{/children/}"><strong>NaniNani</strong></a>
+    </div>
+    <ul class="nav nav-pills">
+      <li class="nav-item">
+        <a class="nav-link" th:href="@{/children/}">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" th:href="@{/children/list/}">List of children</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" th:href="@{/children/add/}">Add a child</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Log out</a>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" th:href="@{/login}">Log out</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
+  <div class="bg-success p-2" style="--bs-bg-opacity: .1;">
+  <h1> <p class="fw-lighter" th:text="'Edit child ' + ${child.name}"></p></h1>
+
   <form method="post" th:action="@{/children/edit}">
+
     <input type="hidden" th:value="${child.id}" name="childId">
 
     <div class="row g-3 ">
@@ -26,8 +51,7 @@
       <div class="col-auto">
         <div id="nameHelp" class="form-text"></div>
       </div>
-    </div>
-    <br>
+    </div><br>
 
     <div class="row g-3 ">
       <div class="col-auto">
@@ -36,10 +60,9 @@
       <div class="col-auto">
         <input th:value="${child.dateOfBirth}" type="date" min="2016-10-21" max = "2022-11-24" class="form-control" id="dateOfBirth" aria-describedby="dateOfBirth" name="dateOfBirth">
       </div>
-
       <div class="col-auto">
         <div id="dateOfBirthHelp" class="form-text">Choose a date between 2016-10-21 and today</div>
-      </div>
+      </div><br>
     </div>
     <button type="submit" class="btn btn-primary">Save edit</button>
   </form>
