--- a/src/main/resources/templates/children/personalizedSleepScheduleForm.html
+++ b/src/main/resources/templates/children/personalizedSleepScheduleForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>List of child</title>
@@ -10,17 +10,65 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="container">
+<div class="container"><br>
+    <nav class="navbar bg-light px-3 mb-3">
+        <div class="nav nav-pills flex-column flex-sm-row">
+        <a class="flex-sm-fill text-sm-center nav-link active" aria-current="page"  th:href="@{/children/}"><strong>NaniNani</strong></a>
+        </div>
+        <ul class="nav nav-pills">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/children/}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/children/list/}">List of children</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/children/add/}">Add a child</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Log out</a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" th:href="@{/login}">Log out</a></li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+    <div class="p-3 mb-2 bg-primary" style="--bs-bg-opacity: .1;">
+        <h1><b><p class="fw-lighter" th:text="'Personalized sleep schedule for ' + ${name}"></p></b></h1><br>
+        <h2> <p class="fw-lighter" th:text="${info}"></p></h2>
 
-    <h1 th:text="'Personalized sleep schedule for ' + ${name}"> Personalized sleep schedule for </h1>
-    <h1 th:text="${info}"> </h1>
     <table class="table table-striped">
         <form method="post" th:action="@{/children/personalizedSleepSchedule/{id}/{name}(id=${childId}, name=${name})}">
-            <input type="time" name="wakeUpTime" >
-            <input type="submit" value="Next sleep">
+            <div class="row g-3 ">
+                <div class="col-auto">
+                  <input type="time" name="wakeUpTime" class="form-control" id="wakeUpTime" aria-describedby="wakeUpTime" ><br>
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Next sleep</button><br>
         </form>
-        <h2 th:text="'Next sleep ' + ${nextSleepTime}"> sleep schedule for </h2>
     </table>
+
+          <div class="p-3 mb-2 bg-primary text-dark" style="--bs-bg-opacity: .3;">
+            <h3><b><p class="fw-lighter" th:text="'Hour of next sleep: ' + ${nextSleepTime}"></p></b></h3>
+          </div>
+
+        <div class="p-3 mb-2 bg-warning " style="--bs-bg-opacity: .1;">
+        <h4><p class="fw-lighter"> <strong> Most important </strong></p></h4>
+        <table class="table table-striped">
+            <thead>
+            <tr>
+                <td class="fw-lighter" ></td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="infoSleepSchedule, iter:${infoSleepSchedule}">
+                <th scope="row" th:text="${iter.index} + 1">1</th>
+                <td th:text="${infoSleepSchedule.describingInfoSleepSchedule}"></td>
+            </tr>
+            </tbody>
+        </table>
+        </div>
+</div>
 </div>
 </body>
 </html>
